src/objects/Case_Template_Group__c.object
<CustomObject>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>Unique identifier for data migration</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <summaryForeignKey>Case_Template__c.Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <picklist>
            <picklistValues>
                <fullName>Background / Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard Process Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation with Client/Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Agreement Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Agreement Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected from Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Finalise Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Broker/Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Uploading Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Advising Broker/Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Agreement Expired</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Case Template Group</label>
    <listViews>
        <fullName>All_Case_Template_Groups</fullName>
        <columns>NAME</columns>
        <columns>ExternalID__c</columns>
        <columns>IsActive__c</columns>
        <columns>Object__c</columns>
        <columns>Stages__c</columns>
        <columns>Subject__c</columns>
        <columns>Number_of_Children__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Template Groups</label>
    </listViews>
    <nameField>
        <label>Case Template Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Template Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>